# resume_client

./: .replit  README_DJANGO.md  README_SETUP.md  app.py  chat_handlers.py  create_packages.py  db.sqlite3  django_requirements.txt  email_service.py  forms.py  index.css  index.html  main.py  manage.py  models.py  payment_service.py  pyproject.toml  replit.md  requirements.txt  routes.py  run_django.py  styles.css  website_content.txt
attached_assets/: Pasted--Brand-Guidelines-Base-for-Design-Primary-Colors-Deep-blue-to-sky-blue-gradient-a-1754133320125_1754133320126.txt  content-1754133282584.md
professional_writers/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: about_us.css  features.css  index.css  linkedin.css  services.css  services_enhanced.css  style.css  wave-divider.css
static/js/: chat.js  django_chat.js  main.js
templates/: about.html  base.html  base_simple.html  blog.html  blog_post.html  contact.html  dashboard.html  faq.html  index.html  infographic_cv_service.html  job_hunt_service.html  linkedin_service.html  lor_service.html  payment.html  payment_success.html  pricing.html  privacy.html  refund.html  samples.html  service_detail.html  services.html  sop_service.html  terms.html  testimonials.html  visual_cv_service.html
templates/admin/: admin_dashboard.html
templates/email/: welcome.html
templates/errors/: 404.html  500.html
templates/registration/: login.html  register.html
writers_app/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
writers_app/migrations/: 0001_initial.py  (+5 more)
(+1 files in other folders)
